--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ html{
     </video>
 
     <h1 class="simplify-head">Welcome <br>To<br> RecyclifyIt.</h1>
-<a href="signuppage.html"><button class="button-2" role="button" style="margin-left: 650px;height: 40px;width: 110px;border-radius: 10px;border: none;box-shadow: 0 0 25px #fff(0, 0, 0, 8);">Enter Now</button></a>
+<a href="home.html"><button class="button-2" role="button" style="margin-left: 650px;height: 40px;width: 110px;border-radius: 10px;border: none;box-shadow: 0 0 25px #fff(0, 0, 0, 8);">Enter Now</button></a>
 
 
 </body>
